--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,38 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-oauth2-client</artifactId>-->
+<!--		</dependency>-->
+
+<dependency>
+    <groupId>org.springframework.security.oauth</groupId>
+    <artifactId>spring-security-oauth2</artifactId>
+    <version>2.5.2.RELEASE</version>
+</dependency>
+
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+   			 <groupId>org.springframework.security</groupId>
+   			 <artifactId>spring-security-web</artifactId>
 		</dependency>
+		
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+    		 <groupId>org.springframework.boot</groupId>
+   			 <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+
+
+		
+<!--<dependency>-->
+<!--    <groupId>org.springframework.security</groupId>-->
+<!--    <artifactId>spring-security-config</artifactId>-->
+    
+<!--</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -53,13 +77,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<dependency>
-   			<groupId>io.springfox</groupId>
-  		 	<artifactId>springfox-swagger-ui</artifactId>
-   			<version>3.0.0</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -71,17 +88,30 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+ 			 <groupId>org.modelmapper</groupId>
+ 			 <artifactId>modelmapper</artifactId>
+ 			 <version>3.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+<dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.7.0</version>
+</dependency>
+
+
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-			<dependency>
- 			 <groupId>org.modelmapper</groupId>
- 			 <artifactId>modelmapper</artifactId>
-			  <version>3.1.1</version>
-		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
