Favorites Cart ve CartItem sınıflarının işlemleri yapıldı.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode =none
 spring.security.user.name=covenant6
 spring.security.user.password=Zafer9707.
+spring.devtools.restart.log-condition-evaluation-delta=false
+
+
+
